// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeField should render a loading state 1`] = `
<EuiForm>
  <EuiFormRow
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          The Time Filter will use this field to filter your data by time.
        </p>
        <p>
          You can choose not to have a time field, but you will not be able to narrow down your data by a time range.
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        component="div"
        gutterSize="xs"
        justifyContent="spaceBetween"
        responsive={true}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <span>
            Time Filter field name
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiLoadingSpinner
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    }
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={true}
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      name="timeField"
      options={
        Array [
          Object {
            "text": "Loading...",
            "value": "",
          },
        ]
      }
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render a selected time field 1`] = `
<EuiForm>
  <EuiFormRow
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          The Time Filter will use this field to filter your data by time.
        </p>
        <p>
          You can choose not to have a time field, but you will not be able to narrow down your data by a time range.
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        component="div"
        gutterSize="xs"
        justifyContent="spaceBetween"
        responsive={true}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <span>
            Time Filter field name
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiLink
            className="timeFieldRefreshButton"
            color="primary"
            onClick={[Function]}
            type="button"
          >
            Refresh
          </EuiLink>
        </EuiFlexItem>
      </EuiFlexGroup>
    }
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value="@timestamp"
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render normally 1`] = `
<EuiForm>
  <EuiFormRow
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          The Time Filter will use this field to filter your data by time.
        </p>
        <p>
          You can choose not to have a time field, but you will not be able to narrow down your data by a time range.
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        component="div"
        gutterSize="xs"
        justifyContent="spaceBetween"
        responsive={true}
        wrap={false}
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <span>
            Time Filter field name
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <EuiLink
            className="timeFieldRefreshButton"
            color="primary"
            onClick={[Function]}
            type="button"
          >
            Refresh
          </EuiLink>
        </EuiFlexItem>
      </EuiFlexGroup>
    }
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render something if hiding time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      The indices which match this index pattern don't contain any time fields.
    </p>
  </EuiText>
</EuiForm>
`;
